<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Chat Cloud</string>
    <string name="user_name">Client</string>
    <string name="app_port">6666</string>
    <string name="latitude">40.744906</string>
    <string name="longitude">-74.023937</string>

    <!-- String literals in the UI -->
    <string name="destination_host">Destination Host</string>
    <string name="destination_host_default">10.0.0.2</string>
    <string name="target_host_default">10.0.0.2</string>
    <string name="destination_port">Destination Port</string>
    <string name="destination_port_default">6667</string>
    <string name="target_port_default">6668</string>
    <string name="title_activity_peer_list">Peers</string>
    <string name="title_activity_peer_info">Info</string>
    <string name="create_chatroom">Enter name for new chat room</string>
    <string name="duplicate">Name already exits</string>
    <string name="message_send">Name already exits</string>
    <string name="message_edit_text">Type your message here.</string>
    <string name="chatroom">Chat Room</string>
    <string name="edit_message">Message</string>
    <string name="name">Your name</string>
    <string name="url">http://10.0.0.2:8080/chat</string>
    <string name="send_label">SEND</string>
    <string name="next_label">NEXT</string>
    <string name="menu_show_peers">Show Peers</string>
    <string name="menu_add_room">Create Rooms</string>
    <string name="menu_cancel">Cancel</string>
    <string name="message_list">Message log</string>
    <string name="quickmsg">Quick Msg</string>
    <string name="defChatRoom">_default</string>
    <string name="defSeq">0</string>
    <string name="alarm">Alarm</string>
    <string name="alarmdef">10000</string>
</resources>